﻿A changelog for recent builds:

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Note that build 228 was the last version supporting Python 2.

Since build 303:
----------------
* Fixed codepage/mojibake issues when non-ascii characters were included in
  COM exceptions raised by Python apps. This should be invisible, but might
  break any workarounds which were used, such as using specific encodings in
  these strings. (#1823, #1833)

* Fixed a bug triggering `win32print.SetJob` to fail due to data type
  (`char*` / `wchar_t*`) mismatch (#1849, @CristiFati)

Since build 302:
----------------
* Tweaks to how DLLs are loaded and our installation found, which should
  improve virtualenv support and version mismatch issues (#1787, #1794)

* Fixed a bug where `win32clipboard.GetClipboardData()` may have returned extra
  data.

* Binary installers for 32-bit 3.10+ are no longer released (#1805)

Since build 301:
----------------
* Fixed support for unicode as a `win32crypt.CREDENTIAL_ATTRIBUTE.Value`

* Support for Python 10, dropped support for Python 3.5 (3.5 security support
  ended 13 Sep 2020)

* Merged win2kras into win32ras. In the unlikely case that anyone is still
  using win2kras, there is a win2kras.py that imports all of win32ras. If you
  import win2kras and it fails with 'you must import win32ras first', then it
  means an old win2kras.pyd exists, which you should remove.

* github branch 'master' was renamed to 'main'.

Since build 300:
----------------
* Fix some confusion on how dynamic COM object properties work. The old
  code was confused, so there's a chance there will be some subtle
  regression here - please open a bug if you find anything, but this
  should fix #1427.

* COM objects are now registered with the full path to pythoncomXX.dll, fixes
  #1704.

* Creating a `win32crypt.CRYPT_ATTRIBUTE` object now correctly sets `cbData`.
